[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amago"
version = "3.3.0"
description = "off-policy RL on long sequences"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Jake Grigsby", email = "grigsby@cs.utexas.edu" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["reinforcement-learning", "memory", "transformers", "machine-learning"]
dependencies = [
  "gymnasium>=0.26,<=0.29.1",
  "torch>=2.5,<3",
  "numpy>=1.21,<3",
  "gin-config",
  "wandb",
  "einops",
  "tqdm",
  "gym",
  "accelerate>=1.0",
  "termcolor",
]

[project.optional-dependencies]
envs = [
  "metaworld @ git+https://github.com/Farama-Foundation/Metaworld.git@04be337a12305e393c0caf0cbf5ec7755c7c8feb",
  "cython<3",
  "popgym",
  "minigrid",
  "stable-retro",
  "dm_env",
  "dm_alchemy @ git+https://github.com/deepmind/dm_alchemy.git",
  "gymnax",
  "matplotlib",
  "opencv-python",
  "procgen",
  "ale_py>=0.10",
]
flash = ["ninja", "packaging", "flash-attn"]
mamba = ["causal-conv1d>=1.1.0", "mamba-ssm"]

[project.urls]
Repository = "https://github.com/UT-Austin-RPL/amago"

[tool.setuptools.packages.find]
include = ["amago*"]
